# mmw-chess

./: CMakeLists.txt  Client.cpp
include/: Bishop.h  ChessBoard.h  GameClient.h  GameState.h  King.h  Knight.h  Pawn.h  Piece.h  PlayerIdResponse.h  PlayerMove.h  Queen.h  Rook.h
src/: Bishop.cpp  ChessBoard.cpp  Client.cpp  GameClient.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Server.cpp  main.cpp
